--- a/loginStyle.css
+++ b/loginStyle.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5)),url("images/extra/backwallpaper.jpg");
+	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5)),url("images/extra/Login.svg");
 	background-size: cover;
 	background-attachment: fixed;
 	display: flex;
@@ -24,7 +24,7 @@ body {
 	height: 500px;
 	position: relative;
 	margin: 6% auto;
-	background: #fff8;
+	background: white;
 	padding: 5px;
 	border-radius: 5px;
 	overflow: hidden;
@@ -57,7 +57,7 @@ body {
 	position: absolute;
 	width: 110px;
 	height: 100%;
-	background: linear-gradient(to right, #FA4B37, #DF2771);
+	background: linear-gradient(to right, #444343, #171616);
 	border-radius: 30px;
 	transition: 0.5s;
 }
@@ -118,7 +118,7 @@ body {
 	cursor: pointer;
 	display: block;
 	margin: auto;
-	background: linear-gradient(to right, #FA4B37, #DF2771);
+	background: linear-gradient(to right, #3e3d3d, #111111);
 	color: #fff;
 	border: 0;
 	outline: none;
