--- a/style.css
+++ b/style.css
@@ -155,11 +155,13 @@ a, button {
 	cursor: pointer;
 	width: 25px;
 	display: none;
+	margin-right:3rem ;
+	filter: grayscale();
 }
 .side-menu {
 	width: 100%;
 	height: 100%;
-	background: rgba(182, 33, 90, 0.993);
+	background: black;
 	position: absolute;
 	top: 0;
 	transition: .8s;
@@ -177,6 +179,7 @@ a, button {
 	list-style: none;
 	/* background: #009900; */
 	display: flex;
+	color: white;
 	justify-content: center;
 	align-items: center;
 	/* border-bottom: 1px solid #fff; */
@@ -196,7 +199,7 @@ a, button {
 }
 .close img{
 	float: right;
-	width: 35px;
+	width: 40px;
 	cursor: pointer;
 	margin: 10px;
 }
